# carteira-investimentos-rust

./: Cargo.toml  README.md
src/: handlers.rs  main.rs
src/src/: models.rs
src/src/src/: database.rs
