[package]
name = "carteira-investimentos"
version = "0.1.0"
edition = "2021"

[dependencies]

# Servidor Web
axum = "0.7"

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# Serialização JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PostgreSQL
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "chrono"
] }

# Templates HTML
askama = "0.12"
askama_axum = "0.4"

# Variáveis de ambiente
dotenvy = "0.15"

# JWT
jsonwebtoken = "9"

# Datas
chrono = { version = "0.4", features = ["serde"] }

# Criptografia de senha
argon2 = "0.5"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Cookies
tower-cookies = "0.10"

# Logs
tracing = "0.1"
tracing-subscriber = "0.3"
